[package]
name = "crawler"
version = "0.1.0"
authors = ["Jon Brennecke <jpbrennecke@gmail.com>"]

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.10.1"
dotenv_codegen = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
argon2rs = "0.2.5"
rand = "0.3.17"
hyper = "0.11.6"
reqwest = "0.8.0"
rocket_cors = "0.2.0"
validator = "0.6.0"
uuid = { version = "0.5", features = ["v4"] }
url = "1.6.0"
redis = "0.9.0"
