[package]
name = "crawler"
version = "0.1.0"
authors = ["Jon Brennecke <jpbrennecke@gmail.com>"]

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
dotenv = "0.10.1"
dotenv_codegen = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.0"
rocket_cors = "0.2.0"
redis = "0.9.0"
